@@ -173,7 +173,7 @@ end_include
 
 begin_enum
 enum|enum
-DECL|enum|__anon2c1605970103
+DECL|enum|__anon2c58274b0103
 block|{
 DECL|enumerator|CAGE_STATE_INIT
 name|CAGE_STATE_INIT
@@ -444,6 +444,27 @@ parameter_list|,
 name|GimpDisplay
 modifier|*
 name|display
+parameter_list|,
+name|gdouble
+name|x
+parameter_list|,
+name|gdouble
+name|y
+parameter_list|,
+name|gint
+name|handle_size
+parameter_list|)
+function_decl|;
+end_function_decl
+
+begin_function_decl
+specifier|static
+name|gint
+name|gimp_cage_tool_is_on_edge
+parameter_list|(
+name|GimpCageTool
+modifier|*
+name|ct
 parameter_list|,
 name|gdouble
 name|x
@@ -1234,6 +1255,13 @@ literal|1
 expr_stmt|;
 name|ct
 operator|->
+name|hovering_edge
+operator|=
+operator|-
+literal|1
+expr_stmt|;
+name|ct
+operator|->
 name|cage_complete
 operator|=
 name|FALSE
@@ -1963,19 +1991,16 @@ argument_list|(
 name|tool
 argument_list|)
 decl_stmt|;
-name|gint
-name|handle
-init|=
-operator|-
-literal|1
-decl_stmt|;
 if|if
 condition|(
 name|ct
 operator|->
 name|config
 condition|)
-name|handle
+block|{
+name|ct
+operator|->
+name|hovering_handle
 operator|=
 name|gimp_cage_tool_is_on_handle
 argument_list|(
@@ -1996,16 +2021,30 @@ argument_list|,
 name|GIMP_TOOL_HANDLE_SIZE_CIRCLE
 argument_list|)
 expr_stmt|;
+name|ct
+operator|->
+name|hovering_edge
+operator|=
+name|gimp_cage_tool_is_on_edge
+argument_list|(
+name|ct
+argument_list|,
+name|coords
+operator|->
+name|x
+argument_list|,
+name|coords
+operator|->
+name|y
+argument_list|,
+name|GIMP_TOOL_HANDLE_SIZE_CIRCLE
+argument_list|)
+expr_stmt|;
+block|}
 name|gimp_draw_tool_pause
 argument_list|(
 name|draw_tool
 argument_list|)
-expr_stmt|;
-name|ct
-operator|->
-name|hovering_handle
-operator|=
-name|handle
 expr_stmt|;
 name|ct
 operator|->
@@ -2084,6 +2123,12 @@ init|=
 operator|-
 literal|1
 decl_stmt|;
+name|gint
+name|edge
+init|=
+operator|-
+literal|1
+decl_stmt|;
 if|if
 condition|(
 name|display
@@ -2112,6 +2157,7 @@ name|ct
 operator|->
 name|config
 condition|)
+block|{
 name|handle
 operator|=
 name|gimp_cage_tool_is_on_handle
@@ -2133,6 +2179,24 @@ argument_list|,
 name|GIMP_TOOL_HANDLE_SIZE_CIRCLE
 argument_list|)
 expr_stmt|;
+name|edge
+operator|=
+name|gimp_cage_tool_is_on_edge
+argument_list|(
+name|ct
+argument_list|,
+name|coords
+operator|->
+name|x
+argument_list|,
+name|coords
+operator|->
+name|y
+argument_list|,
+name|GIMP_TOOL_HANDLE_SIZE_CIRCLE
+argument_list|)
+expr_stmt|;
+block|}
 name|ct
 operator|->
 name|movement_start_x
@@ -2214,6 +2278,11 @@ block|{
 if|if
 condition|(
 name|handle
+operator|==
+operator|-
+literal|1
+operator|&&
+name|edge
 operator|==
 operator|-
 literal|1
@@ -2304,7 +2373,7 @@ elseif|else
 if|if
 condition|(
 name|handle
-operator|>
+operator|>=
 literal|0
 condition|)
 block|{
@@ -2361,6 +2430,48 @@ operator|=
 name|CAGE_STATE_MOVE_HANDLE
 expr_stmt|;
 block|}
+elseif|else
+if|if
+condition|(
+name|edge
+operator|>=
+literal|0
+condition|)
+block|{
+comment|/* User clicked on an edge, we add a new handle here and select it */
+name|gimp_cage_config_insert_cage_point
+argument_list|(
+name|ct
+operator|->
+name|config
+argument_list|,
+name|edge
+argument_list|,
+name|coords
+operator|->
+name|x
+argument_list|,
+name|coords
+operator|->
+name|y
+argument_list|)
+expr_stmt|;
+name|gimp_cage_config_select_point
+argument_list|(
+name|ct
+operator|->
+name|config
+argument_list|,
+name|edge
+argument_list|)
+expr_stmt|;
+name|ct
+operator|->
+name|tool_state
+operator|=
+name|CAGE_STATE_MOVE_HANDLE
+expr_stmt|;
+block|}
 block|}
 else|else
 block|{
@@ -2368,6 +2479,11 @@ comment|/* Cage already closed */
 if|if
 condition|(
 name|handle
+operator|==
+operator|-
+literal|1
+operator|&&
+name|edge
 operator|==
 operator|-
 literal|1
@@ -2397,6 +2513,7 @@ operator|=
 name|CAGE_STATE_SELECTING
 expr_stmt|;
 block|}
+elseif|else
 if|if
 condition|(
 name|handle
@@ -2450,6 +2567,48 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+name|ct
+operator|->
+name|tool_state
+operator|=
+name|CAGE_STATE_MOVE_HANDLE
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|edge
+operator|>=
+literal|0
+condition|)
+block|{
+comment|/* User clicked on an edge, we add a new handle here and select it */
+name|gimp_cage_config_insert_cage_point
+argument_list|(
+name|ct
+operator|->
+name|config
+argument_list|,
+name|edge
+argument_list|,
+name|coords
+operator|->
+name|x
+argument_list|,
+name|coords
+operator|->
+name|y
+argument_list|)
+expr_stmt|;
+name|gimp_cage_config_select_point
+argument_list|(
+name|ct
+operator|->
+name|config
+argument_list|,
+name|edge
+argument_list|)
+expr_stmt|;
 name|ct
 operator|->
 name|tool_state
@@ -3032,6 +3191,15 @@ argument_list|(
 name|tool
 argument_list|)
 decl_stmt|;
+name|GimpCageOptions
+modifier|*
+name|options
+init|=
+name|GIMP_CAGE_TOOL_GET_OPTIONS
+argument_list|(
+name|ct
+argument_list|)
+decl_stmt|;
 name|GimpCursorModifier
 name|modifier
 init|=
@@ -3057,6 +3225,28 @@ block|{
 name|modifier
 operator|=
 name|GIMP_CURSOR_MODIFIER_MOVE
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|ct
+operator|->
+name|hovering_edge
+operator|!=
+operator|-
+literal|1
+operator|&&
+name|options
+operator|->
+name|cage_mode
+operator|==
+name|GIMP_CAGE_MODE_CAGE_CHANGE
+condition|)
+block|{
+name|modifier
+operator|=
+name|GIMP_CURSOR_MODIFIER_PLUS
 expr_stmt|;
 block|}
 else|else
@@ -3712,6 +3902,318 @@ condition|)
 return|return
 name|i
 return|;
+block|}
+return|return
+operator|-
+literal|1
+return|;
+block|}
+end_function
+
+begin_function
+specifier|static
+name|gint
+DECL|function|gimp_cage_tool_is_on_edge (GimpCageTool * ct,gdouble x,gdouble y,gint handle_size)
+name|gimp_cage_tool_is_on_edge
+parameter_list|(
+name|GimpCageTool
+modifier|*
+name|ct
+parameter_list|,
+name|gdouble
+name|x
+parameter_list|,
+name|gdouble
+name|y
+parameter_list|,
+name|gint
+name|handle_size
+parameter_list|)
+block|{
+name|GimpCageOptions
+modifier|*
+name|options
+init|=
+name|GIMP_CAGE_TOOL_GET_OPTIONS
+argument_list|(
+name|ct
+argument_list|)
+decl_stmt|;
+name|GimpCageConfig
+modifier|*
+name|config
+init|=
+name|ct
+operator|->
+name|config
+decl_stmt|;
+name|gint
+name|i
+decl_stmt|;
+name|guint
+name|n_cage_vertices
+decl_stmt|;
+name|GimpVector2
+name|A
+decl_stmt|,
+name|B
+decl_stmt|,
+name|C
+decl_stmt|,
+name|AB
+decl_stmt|,
+name|BC
+decl_stmt|,
+name|AC
+decl_stmt|;
+name|gdouble
+name|lAB
+decl_stmt|,
+name|lBC
+decl_stmt|,
+name|lAC
+decl_stmt|,
+name|lEB
+decl_stmt|,
+name|lEC
+decl_stmt|;
+name|g_return_val_if_fail
+argument_list|(
+name|GIMP_IS_CAGE_TOOL
+argument_list|(
+name|ct
+argument_list|)
+argument_list|,
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+name|n_cage_vertices
+operator|=
+name|gimp_cage_config_get_n_points
+argument_list|(
+name|config
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|n_cage_vertices
+operator|<
+literal|2
+condition|)
+return|return
+operator|-
+literal|1
+return|;
+name|A
+operator|=
+name|gimp_cage_config_get_point_coordinate
+argument_list|(
+name|config
+argument_list|,
+name|options
+operator|->
+name|cage_mode
+argument_list|,
+name|n_cage_vertices
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+name|B
+operator|=
+name|gimp_cage_config_get_point_coordinate
+argument_list|(
+name|config
+argument_list|,
+name|options
+operator|->
+name|cage_mode
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|C
+operator|.
+name|x
+operator|=
+name|x
+expr_stmt|;
+name|C
+operator|.
+name|y
+operator|=
+name|y
+expr_stmt|;
+for|for
+control|(
+name|i
+operator|=
+literal|0
+init|;
+name|i
+operator|<
+name|n_cage_vertices
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|gimp_vector2_sub
+argument_list|(
+operator|&
+name|AB
+argument_list|,
+operator|&
+name|A
+argument_list|,
+operator|&
+name|B
+argument_list|)
+expr_stmt|;
+name|gimp_vector2_sub
+argument_list|(
+operator|&
+name|BC
+argument_list|,
+operator|&
+name|B
+argument_list|,
+operator|&
+name|C
+argument_list|)
+expr_stmt|;
+name|gimp_vector2_sub
+argument_list|(
+operator|&
+name|AC
+argument_list|,
+operator|&
+name|A
+argument_list|,
+operator|&
+name|C
+argument_list|)
+expr_stmt|;
+name|lAB
+operator|=
+name|gimp_vector2_length
+argument_list|(
+operator|&
+name|AB
+argument_list|)
+expr_stmt|;
+name|lBC
+operator|=
+name|gimp_vector2_length
+argument_list|(
+operator|&
+name|BC
+argument_list|)
+expr_stmt|;
+name|lAC
+operator|=
+name|gimp_vector2_length
+argument_list|(
+operator|&
+name|AC
+argument_list|)
+expr_stmt|;
+name|lEB
+operator|=
+name|lAB
+operator|/
+literal|2
+operator|+
+operator|(
+name|SQR
+argument_list|(
+name|lBC
+argument_list|)
+operator|-
+name|SQR
+argument_list|(
+name|lAC
+argument_list|)
+operator|)
+operator|/
+operator|(
+literal|2
+operator|*
+name|lAB
+operator|)
+expr_stmt|;
+name|lEC
+operator|=
+name|sqrt
+argument_list|(
+name|SQR
+argument_list|(
+name|lBC
+argument_list|)
+operator|-
+name|SQR
+argument_list|(
+name|lEB
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|(
+name|lEC
+operator|<
+name|handle_size
+operator|/
+literal|2
+operator|)
+operator|&&
+operator|(
+name|abs
+argument_list|(
+name|SQR
+argument_list|(
+name|lBC
+argument_list|)
+operator|-
+name|SQR
+argument_list|(
+name|lAC
+argument_list|)
+argument_list|)
+operator|<=
+name|SQR
+argument_list|(
+name|lAB
+argument_list|)
+operator|)
+condition|)
+return|return
+name|i
+return|;
+name|A
+operator|=
+name|B
+expr_stmt|;
+name|B
+operator|=
+name|gimp_cage_config_get_point_coordinate
+argument_list|(
+name|config
+argument_list|,
+name|options
+operator|->
+name|cage_mode
+argument_list|,
+operator|(
+name|i
+operator|+
+literal|1
+operator|)
+operator|%
+name|n_cage_vertices
+argument_list|)
+expr_stmt|;
 block|}
 return|return
 operator|-
