@@ -13,7 +13,8 @@ Changes in GIMP 2.7.3
 
 UI:
 
- - foo
+ - Cage tool: allow to add handle to the cage when clicking on an edge
+ - Cage tool: allow to remove selected handles from the cage by hitting delete
 
 
 Core:
